syntax = "proto3";

package protos;

message GroupInfo {
  string ID = 1;
  string DisplayName = 2;
  string Description = 3;
  string Extra = 4;
  string CreatedAt = 5;
  string UpdatedAt = 6;
}

message GroupInfos {
  repeated GroupInfo Data = 1;
}

message ListGroupOutput {
  int64 count = 1;
  repeated GroupInfo Data = 2;
}